--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#667eea" />
-    <!-- Google AdSense -->
-    <script
-        async
-        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7058313793336590"
-        crossorigin="anonymous"
-    ></script>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BE6C28P61K"></script>
@@ -34,42 +28,11 @@
             dataLayer.push(arguments);
         }
         gtag("js", new Date());
-
         gtag("config", "G-BE6C28P61K");
     </script>
 </head>
 
 <body>
-    <!-- PC用広告（左） -->
-    <div class="ad-container-side ad-left">
-        <ins
-            class="adsbygoogle"
-            style="display:block"
-            data-ad-client="ca-pub-7058313793336590"
-            data-ad-slot="9503405133"
-            data-ad-format="auto"
-            data-full-width-responsive="true"
-        ></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </div>
-
-    <!-- PC用広告（右） -->
-    <div class="ad-container-side ad-right">
-        <ins
-            class="adsbygoogle"
-            style="display:block"
-            data-ad-client="ca-pub-7058313793336590"
-            data-ad-slot="9503405133"
-            data-ad-format="auto"
-            data-full-width-responsive="true"
-        ></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </div>
-
     <div id="loader-overlay" class="loader-overlay" style="display: none;">
         <div class="loader"></div>
         <p>手牌を生成中...</p>
@@ -123,9 +86,7 @@
                 </div>
 
                 <div id="hand-view" class="tab-content active">
-                    <div id="tiles-container" class="tiles-container">
-                        <!-- 牌が動的に表示されます -->
-                    </div>
+                    <div id="tiles-container" class="tiles-container"></div>
                 </div>
 
                 <div id="ukeire-view" class="tab-content">
@@ -157,18 +118,9 @@
                 </div>
 
                 <div class="action-buttons">
-                    <button id="submit-btn" class="action-btn submit" onclick="submitAnswer()">
-                        回答
-                    </button>
+                    <button id="submit-btn" class="action-btn submit" onclick="submitAnswer()">回答</button>
                     <button id="giveup-btn" class="action-btn giveup" onclick="giveUp()">あきらめる</button>
-                    <button
-                        id="next-btn"
-                        class="action-btn next"
-                        onclick="nextProblem()"
-                        style="display: none;"
-                    >
-                        次の問題
-                    </button>
+                    <button id="next-btn" class="action-btn next" onclick="nextProblem()" style="display: none;">次の問題</button>
                 </div>
             </div>
         </div>
@@ -181,10 +133,7 @@
                 navigator.serviceWorker
                     .register("sw.js")
                     .then((registration) => {
-                        console.log(
-                            "ServiceWorker registration successful with scope: ",
-                            registration.scope
-                        );
+                        console.log("ServiceWorker registration successful with scope: ", registration.scope);
                     })
                     .catch((err) => {
                         console.log("ServiceWorker registration failed: ", err);
@@ -193,20 +142,7 @@
         }
     </script>
 
-    <!-- モバイル用広告 -->
-    <div class="ad-container-bottom">
-        <ins
-            class="adsbygoogle"
-            style="display:block"
-            data-ad-client="ca-pub-7058313793336590"
-            data-ad-slot="9503405133"
-            data-ad-format="auto"
-            data-full-width-responsive="true"
-        ></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </div>
+    <!-- 広告なし：AdSenseスクリプト削除済み -->
 
     <!-- 遊び方モーダル -->
     <div id="help-modal" class="modal-overlay" style="display: none;">
