クレジット表記

--- a/index.html
+++ b/index.html
@@ -218,6 +218,21 @@
                 </li>
                 <li>答えがわからない場合は、「あきらめる」ボタンで正解と受け入れ牌一覧を確認できます。</li>
             </ol>
+            <hr>
+            <div class="credits">
+                <p class="credit-item twitter">
+                    <a href="https://x.com/AsayakeHahero" target="_blank" rel="noopener noreferrer">
+                        <span class="icon x-icon"></span>
+                        <span>開発者: @AsayakeHahero</span>
+                    </a>
+                </p>
+                <p class="credit-item mahjong-image">
+                    <a href="https://majandofu.com/mahjong-images" target="_blank" rel="noopener noreferrer">
+                        <span class="icon image-icon"></span>
+                        <span>牌画像提供: 麻雀豆腐</span>
+                    </a>
+                </p>
+            </div>
         </div>
     </div>
 </body>
